# stratocaster

./: .gitignore  .gitmodules  .readthedocs.yaml  AUTHORS.md  README  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yaml
devtools/conda-envs/: docs.yaml  test.yaml  test.yml
docs/: api.rst  conf.py  getting_started.rst  index.rst  installation.rst  newstrat.py  user_guide.rst
docs/api/: strategies.rst
docs/code/: iterative.py  newstrat.py
src/stratocaster/: __init__.py
src/stratocaster/base/: __init__.py  exceptions.py  models.py  strategy.py
src/stratocaster/strategies/: __init__.py  connectivity.py  radialgrowth.py  uncertainty.py
src/stratocaster/tests/: conftest.py  networks.py  test_connectivity_strategy.py  test_radialgrowth_strategy.py  test_strategy_abstraction.py  test_strategy_base.py  test_uncertainty_strategy.py  utils.py
