[project]
name = "stratocaster"
description = ""
readme = {file = "README.md", content-type = "text/markdown"}
maintainers = [
            {name = "Ian Kenney", email = "ianmichaelkenney@gmail.com"}
]
authors = [{name = "Ian Kenney", email = "ianmichaelkenney@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
	    "Intended Audience :: Science/Research",
	    "License :: OSI Approved :: MIT License",
	    "Operating System :: POSIX",
	    "Programming Language :: Python :: 3",
	    "Development Status :: 1 - Planning",
]
requires-python = ">= 3.9"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/OpenFreeEnergy/stratocaster"
Issues = "https://github.com/OpenFreeEnergy/stratocaster/issues"

[project.optional-dependencies]
test = [
     "pytest",
     "pytest-cov",
]
dev = [
    "stratocaster[test]",
    "black",
]
docs = [
     "sphinx",
     "ofe-sphinx-theme @ git+https://github.com/OpenFreeEnergy/ofe-sphinx-theme.git@main",
]

[build-system]
requires = [
    "setuptools",
    "versioningit",
]
build-backend = "setuptools.build_meta"

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]
default-tag = "v0.0.0"